--- a/config.yaml
+++ b/config.yaml
@@ -2,13 +2,20 @@ extensions:
 
 receivers:
   telemetrygen:
-    throughput: 1048576 # 1MB (1024*1024)
+    metrics:
+      throughput: 1048576 # 1MB/s (1024*1024)
+    logs:
+      throughput: 1048576 # 1MB/s (1024*1024)
+    traces:
+      throughput: 1048576 # 1MB/s (1024*1024)
+      services:
+        randomized_name_count: 200
 
 processors:
 
 exporters:
   debug:
-    verbosity: detailed
+    verbosity: normal
 
 service:
   telemetry:
@@ -18,12 +25,15 @@ service:
     metrics:
       receivers: [telemetrygen]
       processors:
-      exporters: [debug]
+      exporters:
+        - debug
     logs:
       receivers: [telemetrygen]
       processors:
-      exporters: [debug]
+      exporters:
+        - debug
     traces:
       receivers: [telemetrygen]
       processors:
-      exporters: [debug]
+      exporters:
+        - debug
